# windows-local-ai-collaboration

./: .env.example  .gitignore  README.md  board.md  settings.json  tasks.md  test-all-api.js  test.js
discussions/: 2026-03-11.md  project-review-20260316.md
messages/: 1773756047846.json  1773756097165.json  1773756133000.json  1773756171174.json  1773756175000.json  1773756745000.json  1773756820000.json  1773756902000.json  1773756941000.json  1773756979000.json  1773757300000.json  1773757500000.json  1773757750000.json  1773757800000.json  1773758500000.json
projects/: FEEDBACK.md  PROGRESS.md  SPEC.md
scripts/: api-server.js  config.js  config.sample.js  fix-render.js  package-lock.json  package.json  platform.js  server.js  test-watcher.js  watcher.js
ui/: index.html
任务协作平台/: index.html  package-lock.json  package.json  vite.config.js
任务协作平台/backend/: files.js  lock.js  package-lock.json  package.json  server.js
任务协作平台/src/: App.vue  socket-client.js
任务协作平台/src-tauri/: Cargo.toml  tauri.conf.json
任务协作平台/src-tauri/src/: main.rs
